feat(trip-planning): support multiple category filtering
