# swagger/v1/swagger.yaml
@@ -264,13 +264,17 @@ paths:
           type: integer
           minimum: 1
           example: 3
-      - name: category
+      - name: category[]
         in: query
         required: false
-        description: Filter by category ID
+        description: Filter by category IDs
         schema:
-          type: integer
-          example: 1
+          type: array
+          items:
+            type: integer
+          example:
+          - 1
+          - 2
       - name: page
         in: query
         required: false
